[metadata]
name = custom-literals
version = 0.1.2
author = RocketRace
author_email = oliviaspalmu@gmail.com
description = A module implementing custom literal suffixes using pure Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RocketRace/custom-literals

project_urls =
    Bug Tracker = https://github.com/RocketRace/custom-literals/issues

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Topic :: Internet
    Typing :: Typed
    Intended Audience :: Developers
    Intended Audience :: Information Technology


[options]
packages = 
    custom_literals
python_requires = >=3.7
